Actions
Bug #4953
closed[PATCH] thread.c (do_select): fix memory leak
Bug #4953:
[PATCH] thread.c (do_select): fix memory leak
Description
Reproducible trivially:
loop { IO.select([$stdin], nil, nil, 0) }
If you prefer git:
git pull git://bogomips.org/ruby.git select-leak
Files
Updated by kosaki (Motohiro KOSAKI) about 15 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r32348.
Eric, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- thread.c (do_select): fix memory leak.
Patch by Eric Wong. Thank you! [Bug #4953] [ruby-core:37702]
Actions