* thread.c (do_select): fix memory leak. Patch by Eric Wong. Thank you! [Bug #4953] [ruby-core:37702]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@32348 b2dd03c8-39d4-4d8f-98ff-823fe69b080e